--- a/html/第一个网页.html
+++ b/html/第一个网页.html
@@ -19,7 +19,7 @@
 </header>
 
     <hr/>
-    <h2><em>登陆页面</em></h2>
+    <h2><em>系统登陆页面</em></h2>
     <br/>
 <!--
     action:表单提交的位置，可以是网站，可以是请求处理地址
@@ -28,8 +28,7 @@
 <form method="post" action="注意事项.html">
     <p><strong>帐号:</strong><input name="username" type="text" maxlength="8" size="30"></p>
     <p><strong>密码:</strong><input name="pwd" type="password" maxlength="8" size="30"></p>
-    性别：
-    <p><input type="radio" value="boy" name="sex"/>男
+    性别：<p><input type="radio" value="boy" name="sex"/>男
     <input type="radio" value="girl" name="sex"/>女</p>
     <p>
         <input type="submit" name="Button" value="提交"/>
