--- a/html/第一个网页.html
+++ b/html/第一个网页.html
@@ -37,7 +37,7 @@
 </form>
 
 
-<p><em>请注意:</em><p/>不得随意修改密码&nbsp;&nbsp;修改密码应自负责任<br/>
+<p><em>请注意:</em><p/>不得随意修改密码&nbsp;&nbsp;请记住密码<br/>
 
   <br>
   <a href="注意事项.html">点击查看注意事项</a><br/>
